--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,10 @@
     --cd-gray: #cccdcd;
 }
 
+.fs_xs {
+    font-size: var(--fs-xs) !important;
+}
+
 .firstpage::-webkit-scrollbar-track {
     border-radius: 12px;
 }
