--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2001,8 +2001,8 @@
 }
 
 .px_6 {
-    padding-right: 6px;
-    padding-bottom: 6px;
+    padding-right: 6px ;
+    padding-left: 6px ;
 }
 
 .gradient_text {
